--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -4,7 +4,8 @@
     <data>
 
         <variable
-            name="user"            type="com.ulanapp.testrentateam.data.model.User" />
+            name="user"
+            type="com.ulanapp.testrentateam.data.data.model.User" />
 
     </data>
 
