--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="top"
             android:background="@color/colorPrimary"
+            app:titleTextColor="#FDFDFD"
             android:minHeight="?attr/actionBarSize"
             app:popupTheme="@style/Widget.AppCompat.PopupMenu.Overflow"/>
 
