Handle error message if loading failed

--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="clickListener"
-            type="com.ulanapp.testrentateam.data.ui.OnUserClickListener" />
+            type="com.ulanapp.testrentateam.data.listeners.OnUserClickListener" />
 
     </data>
 
