--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,15 +21,15 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="top"
             android:background="@color/colorPrimary"
-            app:titleTextColor="#FDFDFD"
             android:minHeight="?attr/actionBarSize"
-            app:popupTheme="@style/Widget.AppCompat.PopupMenu.Overflow"/>
+            app:popupTheme="@style/Widget.AppCompat.PopupMenu.Overflow"
+            app:titleTextColor="#FDFDFD" />
 
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/main_toolbar"/>
+            android:layout_below="@+id/main_toolbar" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation_menu"
@@ -39,7 +39,8 @@
             android:fitsSystemWindows="true"
             app:labelVisibilityMode="labeled"
             app:menu="@menu/bottom_naviation_menu"
-            app:onItemSelected="@{mainViewModel::NavigationClick}"/>
+            app:onItemSelected="@{mainViewModel::NavigationClick}" />
 
     </RelativeLayout>
+
 </layout>
