Change folder name (data to project)

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="homeViewModel"
-            type="com.ulanapp.testrentateam.data.ui.home.HomeViewModel" />
+            type="com.ulanapp.testrentateam.project.ui.home.HomeViewModel" />
 
     </data>
 
