--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="mainViewModel"
-            type="com.ulanapp.testrentateam.data.ui.main.MainViewModel" />
+            type="com.ulanapp.testrentateam.project.ui.main.MainViewModel" />
 
     </data>
 
