--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="curentUser"
-            type="com.ulanapp.testrentateam.data.data.model.User" />
+            type="com.ulanapp.testrentateam.project.data.model.User" />
 
     </data>
 
