--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -8,9 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:layout_margin="10dp"
         android:text="Тестовое задание Rentateam"
         android:textSize="18sp">
-
     </TextView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
