--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="@{user.first_name}"
+            android:text="@{user.first_name + @string/empty_space + user.last_name}"
             android:textSize="19sp" />
 
     </androidx.cardview.widget.CardView>
