--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,9 @@
 <layout>
 
     <data>
-
         <variable
             name="mainViewModel"
-            type="com.ulanapp.testrentateam.project.ui.main.MainViewModel" />
-
+            type="com.ulanapp.mvvm.project.ui.main.MainViewModel" />
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -42,5 +40,4 @@
             app:onItemSelected="@{mainViewModel::NavigationClick}" />
 
     </RelativeLayout>
-
 </layout>
